# wrc_lab_tools

./: README.md  pyproject.toml
scripts/: check_and_update.sh  setup_student_env.sh  update_all_students.sh
surfer_lib/: surfer.py  utils.py
wrc_lab_tools/: __init__.py  video_stream_viewer.py
