[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrc-lab-tools"
version = "0.1.0"
description = "Utility tools for WRC lab workspace"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "WRC Lab"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Add your dependencies here
    "opencv-python"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
video-stream-viewer = "wrc_lab_tools.video_stream_viewer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wrc_lab_tools*"]
exclude = ["tests*"]
